--- a/Heaven's_a_Lie.mw
+++ b/Heaven's_a_Lie.mw
@@ -1,4 +1,4 @@
-'''«Heaven's a Lie»''' (''Rai om kelastuz'') om „[[Lacuna Coil]]“:an pajo da ühtinnimine singl «[[Comalies]]»-al'bomas, kudamb om pästtud [[2002]]-žes vodes.
+'''«Heaven's a Lie»''' (''Rai om kelastuz'') om „[[Lacuna Coil]]“:an pajo da ühtinnimine singl «[[Comalies]]»-al'bomas, kudamb om pästtud [[2002]]-žes vodes. Se om üks' kaikižiš tetabižiš gruppan pajoišpäi.
 
 Pajon tekst om [[anglijan kel'|anglijan kelel]]. Konteksan mödhe, nece ei ole antireligiozine pajo, kut äjad meletam.
 {{stub}}
