*Empty MediaWiki Message*

--- a/Kirilline_kirjamišt.mw
+++ b/Kirilline_kirjamišt.mw
@@ -1,5 +1,5 @@
 {{1000}}
-'''Kirilline kirjamišt''' om kirjutandsistem, kudamb om heimos [[grekan kirjamišt]]onke da [[Glagolic|glagolicanke]].
+'''Kirilline kirjamišt''' (vai '''kirillic''') om kirjutandsistem, kudamb om heimos [[grekan kirjamišt]]onke da [[Glagolic|glagolicanke]].
 
 == Venäkelen kirjamišt ==
 [[Fail:Cyrillic.russian.script.year.1918.png|420px|Venäkelen nügüd'aigaine kirilline kirjamišt]]
@@ -7,7 +7,10 @@
 == Kirilližen kirjamišton kävutand vepsän kirjkeles ==
 1930-den voziden toižes poles "[[Krasnoje Šoltozero]]"-lehtez lähtli pordon aigad vepsänkel'židen materialoidenke, kudambad paindihe kirilližel (venäläižel) kirjamištol.
 
-Vl. 1991 Petroskoihe pästtihe abekirj vepsän kelen pohjoižpaginal. Se kirjutihe mugažo kirilližel kirjamištol. Nece naprind jäi jäl'gusita. Nügüd' kaik vepsänkel'žed kirjad paindas latinižel kirjamištol.
+Vl. 1991 Petroskoihe pästtihe abekirj vepsän kelen pohjoižpaginal. Se kirjutihe mugažo kirilližel kirjamištol. Nece naprind jäi jäl'gusita. Nügüd' kaik vepsänkel'žed kirjad [[Karjal]]as paindas latinižel kirjamištol.
+
+=== Nügüd'läine vepsän kirillic ===
+[[2013]] vodel [[Piter]]iš om pästtud [[Abramov Nikolai|Nikolajan Abramovan]] kirilline runokogoduz. Sen nimi om «[[Оять-ёген рандал...]]». Om mugažo kaks' kirillišt vepsänkelišt saitad Internetas: [[Vepsän Vikii]] da [[VVIKP]].
 
 {{stub}}
 
