кажется, восстановила... надо лишь оформить

--- a/Vepsän_kirjamišt.mw
+++ b/Vepsän_kirjamišt.mw
@@ -2,8 +2,28 @@
 
 == Istorii ==
 
-=== Nügüd'aigaline kirjamišt ===
+=== Ezmäine projekt (1913. voz') ===
+{| style="font-family:Arial Unicode MS; font-size:1.4em; border-color:#000000; border-width:1px; border-style:solid; border-collapse:collapse; background-color:#F8F8EF"
+|style="padding:3px"| А а
+|style="padding:3px"| Б б
+|style="padding:3px"| В в
+|style="padding:3px"| Г г
+|style="padding:3px"| Ѓ ѓ
+|style="padding:3px"| Д д
+|style="padding:3px"| Е е
+|-
+|style="padding:3px"| Ё ё || Ж ж || З з || И и || І і || Й й || К к
+|-
+|style="padding:3px"| Л л || М м || Н н || О о || П п || Р р || С с
+|-
+|style="padding:3px"| <sup>З</sup>С <sup>з</sup>с || Т т || У у || Ў ў || Ф ф || Х х || Ц ц
+|-
+|style="padding:3px"| Ч ч || Ш ш || Щ щ || ъ || ы || ь || Э э
+|-
+|style="padding:3px"| Ю ю || Я я ||  ||  ||  ||  || 
+|}
 
+=== Nügüd'aigaline kirjamišt ===
 Nügüd'aigaižes vepsän kirjamištos oma [[28 (lugu)|kaks'kümne kahesa]] kirjamed, lugemata [[apostrof]]an (pehmituzznaman).
 
 {| style="font-family:Arial Unicode MS; font-size:1.4em; border-color:#000000; border-width:1px; border-style:solid; border-collapse:collapse; background-color:#F8F8EF"
