*Empty MediaWiki Message*

--- a/Vepsän_kirjamišt.mw
+++ b/Vepsän_kirjamišt.mw
@@ -4,28 +4,54 @@
 
 === Ezmäine projekt (1913. voz') ===
 {| style="font-family:Arial Unicode MS; font-size:1.4em; border-color:#000000; border-width:1px; border-style:solid; border-collapse:collapse; background-color:#F8F8EF"
-|style="padding:3px"| А а
-|style="padding:3px"| Б б
-|style="padding:3px"| В в
-|style="padding:3px"| Г г
-|style="padding:3px"| Ѓ ѓ
-|style="padding:3px"| Д д
-|style="padding:3px"| Е е
+| style="width:3em; text-align:center; padding: 3px;" | А а
+| style="width:3em; text-align:center; padding: 3px;" | Б б
+| style="width:3em; text-align:center; padding: 3px;" | В в
+| style="width:3em; text-align:center; padding: 3px;" | Г г
+| style="width:3em; text-align:center; padding: 3px;" | Ѓ ѓ
+| style="width:3em; text-align:center; padding: 3px;" | Д д
+| style="width:3em; text-align:center; padding: 3px;" | Е е
+| style="width:3em; text-align:center; padding: 3px;" | Ё ё
 |-
-|style="padding:3px"| Ё ё || Ж ж || З з || И и || І і || Й й || К к
+| style="width:3em; text-align:center; padding: 3px;" | Ж ж
+| style="width:3em; text-align:center; padding: 3px;" | З з
+| style="width:3em; text-align:center; padding: 3px;" | И и
+| style="width:3em; text-align:center; padding: 3px;" | І і
+| style="width:3em; text-align:center; padding: 3px;" | Й й
+| style="width:3em; text-align:center; padding: 3px;" | К к
+| style="width:3em; text-align:center; padding: 3px;" | Л л
+| style="width:3em; text-align:center; padding: 3px;" | М м
 |-
-|style="padding:3px"| Л л || М м || Н н || О о || П п || Р р || С с
+| style="width:3em; text-align:center; padding: 3px;" | Н н
+| style="width:3em; text-align:center; padding: 3px;" | О о
+| style="width:3em; text-align:center; padding: 3px;" | П п
+| style="width:3em; text-align:center; padding: 3px;" | Р р
+| style="width:3em; text-align:center; padding: 3px;" | С с
+| style="width:3em; text-align:center; padding: 3px;" | <sup>З</sup>С <sup>з</sup>с
+| style="width:3em; text-align:center; padding: 3px;" | Т т
+| style="width:3em; text-align:center; padding: 3px;" | У у
 |-
-|style="padding:3px"| <sup>З</sup>С <sup>з</sup>с || Т т || У у || Ў ў || Ф ф || Х х || Ц ц
+| style="width:3em; text-align:center; padding: 3px;" | Ў ў
+| style="width:3em; text-align:center; padding: 3px;" | Ф ф
+| style="width:3em; text-align:center; padding: 3px;" | Х х
+| style="width:3em; text-align:center; padding: 3px;" | Ц ц
+| style="width:3em; text-align:center; padding: 3px;" | Ч ч
+| style="width:3em; text-align:center; padding: 3px;" | Ш ш
+| style="width:3em; text-align:center; padding: 3px;" | Щ щ
+| style="width:3em; text-align:center; padding: 3px;" | ъ
 |-
-|style="padding:3px"| Ч ч || Ш ш || Щ щ || ъ || ы || ь || Э э
-|-
-|style="padding:3px"| Ю ю || Я я ||  ||  ||  ||  || 
+| style="width:3em; text-align:center; padding: 3px;" | ы
+| style="width:3em; text-align:center; padding: 3px;" | ь
+| style="width:3em; text-align:center; padding: 3px;" | Э э
+| style="width:3em; text-align:center; padding: 3px;" | Ю ю
+| style="width:3em; text-align:center; padding: 3px;" | Я я
+| style="width:3em; text-align:center; padding: 3px;" | 
+| style="width:3em; text-align:center; padding: 3px;" | 
+| style="width:3em; text-align:center; padding: 3px;" | 
 |}
 
-=== Nügüd'aigaline kirjamišt ===
+=== Nügüd'aigaline (oficialine) kirjamišt (2007—...) ===
 Nügüd'aigaižes vepsän kirjamištos oma [[28 (lugu)|kaks'kümne kahesa]] kirjamed, lugemata [[apostrof]]an (pehmituzznaman).
-
 {| style="font-family:Arial Unicode MS; font-size:1.4em; border-color:#000000; border-width:1px; border-style:solid; border-collapse:collapse; background-color:#F8F8EF"
 | style="width:3em; text-align:center; padding: 3px;" | [[A|A a]]
 | style="width:3em; text-align:center; padding: 3px;" | [[B|B b]]
@@ -59,6 +85,9 @@ Nügüd'aigaižes vepsän kirjamištos oma [[28 (lugu)|kaks'kümne kahesa]] kirj
 | style="width:3em; text-align:center; padding: 3px;" | [[Ä|Ä ä]]
 | style="width:3em; text-align:center; padding: 3px;" | [[Ö (kirjam)|Ö ö]]
 | style="width:3em; text-align:center; padding: 3px;" | [[Apostrof|']]
+| style="width:3em; text-align:center; padding: 3px;" | 
+| style="width:3em; text-align:center; padding: 3px;" | 
+| style="width:3em; text-align:center; padding: 3px;" | 
 |}
 {{stub}}
 
