*Empty MediaWiki Message*

--- a/Vepsän_kirjamišt.mw
+++ b/Vepsän_kirjamišt.mw
@@ -2,7 +2,7 @@
 
 == Istorii ==
 
-=== Ezmäine projekt (1913. voz') ===
+=== Ezmäine projekt (1913) ===
 {| style="font-family:Arial Unicode MS; font-size:1.4em; border-color:#000000; border-width:1px; border-style:solid; border-collapse:collapse; background-color:#F8F8EF"
 | style="width:3em; text-align:center; padding: 3px;" | А а
 | style="width:3em; text-align:center; padding: 3px;" | Б б
@@ -89,6 +89,9 @@ Nügüd'aigaižes vepsän kirjamištos oma [[28 (lugu)|kaks'kümne kahesa]] kirj
 | style="width:3em; text-align:center; padding: 3px;" | 
 | style="width:3em; text-align:center; padding: 3px;" | 
 |}
+
+=== Oficialitoi kirilližen kirjamišton projekt (2011) ===
+Projekt (m. k. ''uz' vepsän kirillic'') om sadud [[2011]]-žes vodes. [[2013]]. vodel [[Piter]]iš om pästtud [[Abramov Nikolai|Nikolajan Abramovan]] kirilline runokogoduz. Sen nimi om «[[Оять-ёген рандал...]]». Om mugažo kaks' kirillišt vepsänkelišt saitad Internetas — [[Vepsän Vikii]] da [[VVIKP]].
 {{stub}}
 
 [[Kategorii:Vepsän kel']]
