/* Oficialitoi kirilližen kirjamišton projekt (2011) */ перенесла

--- a/Vepsän_kirjamišt.mw
+++ b/Vepsän_kirjamišt.mw
@@ -91,7 +91,9 @@ Nügüd'aigaižes vepsän kirjamištos oma [[28 (lugu)|kaks'kümne kahesa]] kirj
 |}
 
 === Oficialitoi kirilližen kirjamišton projekt (2011) ===
-Projekt (m. k. ''uz' vepsän kirillic'') om sadud [[2011]]-žes vodes. [[2013]]. vodel [[Piter]]iš om pästtud [[Abramov Nikolai|Nikolajan Abramovan]] kirilline runokogoduz. Sen nimi om «[[Оять-ёген рандал...]]». Om mugažo kaks' kirillišt vepsänkelišt saitad Internetas — [[Vepsän Vikii]] da [[VVIKP]].
+Projekt (m. k. ''uz' vepsän kirillic'') om sädud [[2011]]-žes vodes. [[2013]]. vodel [[Piter]]iš om pästtud [[Abramov Nikolai|Nikolajan Abramovan]] kirilline runokogoduz. Sen nimi om «[[Оять-ёген рандал...]]». Om mugažo kaks' kirillišt vepsänkelišt saitad Internetas — [[Vepsän Vikii]] da [[VVIKP]].
+
+Se om [[venäkel'ne kirjamišt|venäkel'žen kirjamišton]] tüvel. Ei sai suren levigandused (nügüdläižen aigan).
 {{stub}}
 
 [[Kategorii:Vepsän kel']]
