--- a/Vepsän_kirjamišt.mw
+++ b/Vepsän_kirjamišt.mw
@@ -90,7 +90,7 @@ Nügüd'aigaižes vepsän kirjamištos oma [[28 (lugu)|kaks'kümne kahesa]] kirj
 | style="width:3em; text-align:center; padding: 3px;" | 
 |}
 
-=== Oficialitoi kirilližen kirjamišton projekt (2011) ===
+=== Kirilližen kirjamišton oficialitoi projekt (2011) ===
 Projekt (m. k. ''uz' vepsän kirillic'') om sädud [[2011]]-žes vodes. [[2013]]. vodel [[Piter]]iš om pästtud [[Abramov Nikolai|Nikolajan Abramovan]] kirilline runokogoduz — «[[Оять-ёген рандал...]]». Om mugažo kaks' kirillišt vepsänkelišt saitad Internetas — [[Vepsän Vikii]] da [[VVIKP]].
 
 Se om [[venäkel'ne kirjamišt|venäkel'žen kirjamišton]] tüvel. Ei sai suren levigandused (nügüdläižen aigan).
