*Empty MediaWiki Message*

--- a/Platyptilia_morophaea.mw
+++ b/Platyptilia_morophaea.mw
@@ -1,4 +1,4 @@
-'''''Platyptilia morophaea''''' om [[lipkaižed|lipkaižiden]] erik ''[[Pterophoridae]]''-sugukundas. Om avaiži da ümbrikirjuti vl. 1920 entomolog [[Meirik Edvard|Meirik]].
+'''''Platyptilia morophaea''''' om [[lipkaižed|lipkaižiden]] erik ''[[Pterophoridae]]''-sugukundas. Avaiži da ümbrikirjuti vl. 1920 entomolog [[Meirik Edvard|Meirik]].
 
 Eläb tropižes [[Afrik]]as. Necil lipkaižel, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
 {{stub}}
