*Empty MediaWiki Message*

--- a/Platyptilia_morophaea.mw
+++ b/Platyptilia_morophaea.mw
@@ -1,6 +1,6 @@
 '''''Platyptilia morophaea''''' om [[lipkaižed|lipkaižiden]] erik ''[[Pterophoridae]]''-sugukundas. Avaiži da ümbrikirjuti vl. 1920 entomolog [[Meirik Edvard|Meirik]].
 
-Eläb tropižes [[Afrik]]as. Necil lipkaižel, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
+Eläb tropižes [[Afrik]]as ([[Efiopii]], [[Kenii]]). Necil lipkaižel, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
 {{stub}}
 
 [[Kategorii:Živatad kirjamišton mödhe]]
