Реконструируя дореволюционный алфавит, надо тогда и об этой красоте не забывать.

--- a/Vepsän_kirjamišt.mw
+++ b/Vepsän_kirjamišt.mw
@@ -3,6 +3,10 @@
 == Istorii ==
 
 === Ezmäine projekt (1913) ===
+Ezmäižen venä-vepsläine vajehnikan oli tehtud opendai [[Uspenskii Pavel|Pavel Uspenskii]] [[1913]] vodel. Vepsän sanad oliba kirjutadud siš [[kirilline kirjamišt|kirillical]] ližakirjamidenke.
+
+Ozaiten, Uspenskijan kirjamišt oli mugoman:
+
 {| style="font-family:Arial Unicode MS; font-size:1.4em; border-color:#000000; border-width:1px; border-style:solid; border-collapse:collapse; background-color:#F8F8EF"
 | style="width:3em; text-align:center; padding: 3px;" | А а
 | style="width:3em; text-align:center; padding: 3px;" | Б б
@@ -42,11 +46,11 @@
 |-
 | style="width:3em; text-align:center; padding: 3px;" | ы
 | style="width:3em; text-align:center; padding: 3px;" | ь
+| style="width:3em; text-align:center; padding: 3px;" | Ѣ ѣ
 | style="width:3em; text-align:center; padding: 3px;" | Э э
 | style="width:3em; text-align:center; padding: 3px;" | Ю ю
 | style="width:3em; text-align:center; padding: 3px;" | Я я
-| style="width:3em; text-align:center; padding: 3px;" | 
-| style="width:3em; text-align:center; padding: 3px;" | 
+| style="width:3em; text-align:center; padding: 3px;" | Ѳ ѳ
 | style="width:3em; text-align:center; padding: 3px;" | 
 |}
 
