/* Lapsenbiblii vepsän kelel */

--- a/Biblii.mw
+++ b/Biblii.mw
@@ -3,7 +3,7 @@
 
 [[Vul'gat]] om Biblijan latinankel'ne kändmuz.
 
-== Lapsenbiblii vepsän kelel ==
+== Lapsiden Biblii vepsän kelel ==
 [[Fail:Biblii.jpg|thumb|left|250px|Lapsiden Biblijan pästandan kirjankor']]
 [[1996]] vodel oli pästtud lapsiden Biblii vepsän kelel. Kändai om [[Zaiceva Nina|Nina Zaiceva]].
 
