--- a/Vener.mw
+++ b/Vener.mw
@@ -1,7 +1,7 @@
 {{1000}}
 [[Fail:Venus globe.jpg|thumb|right|250px|Vener]]
 [[Fail:Venus symbol.svg|left|30px]]
-'''Vener''' om toine planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as, [[Ma (planet)|Maižen]] gruppan planet. Matk Veneraspäi Päiväižehesai om läz 108 208 000 kilometrad. Planet punose ümbri Päiväižes da tegeb kogonaižen punondan 224,7 maižiš päiviš. 
+'''Vener''' om toine planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as, [[Ma (planet)|Maižen]] gruppan planet. Matk Veneraspäi Päiväižehesai om läz 108 208 000 kilometrad. Planet punose ümbri Päiväižes da tegeb kogonaižen punondan 224,7 maižes päiväs. 
 
 Veneral oma vepsläižed nimed: '''''Ehttähthaine''''', '''''Homendeztähthäine''''' da '''''Zor'atähthaine'''''.
 
