--- a/Merkurii.mw
+++ b/Merkurii.mw
@@ -1,7 +1,7 @@
 {{1000}}
 [[Fail:Mercury_in_color_-_Prockter07_centered.jpg|pisi|250px|Merkurii]]
 [[Fail:Mercury_symbol.svg|hura|30px|]]
-'''Merkurii''' om ezmäine planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as. Se om kaikiš penemb Päiväižen sisteman planet. Merkurijan [[perigelii]] om 46 001 210 km, [[afelii]] om 69 816 927 km. Planet punose ümbri Päiväižes da tegeb kogonaižen punondan 88 maižiš päiviš.
+'''Merkurii''' om ezmäine planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as. Se om kaikiš penemb Päiväižen sisteman planet. Merkurijan [[perigelii]] om 46 001 210 km, [[afelii]] om 69 816 927 km. Planet punose ümbri Päiväižes da tegeb kogonaižen punondan 88 maižes päiväs.
 
 Merkurijal ei ole londuseližid kaimdajoid.
 {{stub}}
