--- a/Saturn.mw
+++ b/Saturn.mw
@@ -2,7 +2,7 @@
 [[Fail:Saturn during Equinox.jpg|thumb|right|250px|Saturn (fotokuva [[Kassini—Güigens]]-stancijaspäi)]]
 {{tärtused|Saturn}}
 [[Fail:Saturn symbol.svg|left|30px]]
-'''Saturn''' om 6. planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as. Sen [[perigelii]] om 1 353 572 956 km, a [[afelii]] om 1 513 325 783 km. Planet punose ümbri Päiväižes da tegeb kogonaižen punondan 29,46 maižiš voziš.
+'''Saturn''' om 6. planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as. Sen [[perigelii]] om 1 353 572 956 km, a [[afelii]] om 1 513 325 783 km. Planet punose ümbri Päiväižes da tegeb kogonaižen punondan 29,46 maižes vodes.
 
 Saturnal om [[Saturnan kaimdajad|62 kaimdajad]].
 {{stub}}
