*Empty MediaWiki Message*

--- a/Vepsän_kirjamišt.mw
+++ b/Vepsän_kirjamišt.mw
@@ -15,13 +15,13 @@ Ozaiten, Uspenskijan kirjamišt oli mugoman:
 | style="width:3em; text-align:center; padding: 3px;" | Ѓ ѓ
 | style="width:3em; text-align:center; padding: 3px;" | Д д
 | style="width:3em; text-align:center; padding: 3px;" | Е е
-| style="width:3em; text-align:center; padding: 3px;" | Ё ё
+| style="width:3em; text-align:center; padding: 3px;" | (Ё ё)
 |-
 | style="width:3em; text-align:center; padding: 3px;" | Ж ж
 | style="width:3em; text-align:center; padding: 3px;" | З з
 | style="width:3em; text-align:center; padding: 3px;" | И и
 | style="width:3em; text-align:center; padding: 3px;" | І і
-| style="width:3em; text-align:center; padding: 3px;" | Й й
+| style="width:3em; text-align:center; padding: 3px;" | (Й й)
 | style="width:3em; text-align:center; padding: 3px;" | К к
 | style="width:3em; text-align:center; padding: 3px;" | Л л
 | style="width:3em; text-align:center; padding: 3px;" | М м
