*Empty MediaWiki Message*

--- a/Vepsän_kirjamišt.mw
+++ b/Vepsän_kirjamišt.mw
@@ -54,6 +54,8 @@ Ozaiten, Uspenskijan kirjamišt oli mugoman:
 | style="width:3em; text-align:center; padding: 3px;" | 
 |}
 
+Sen kirjamišt muga ei sai suren levigandused-ki.
+
 === Nügüd'aigaline (oficialine) kirjamišt (2007—...) ===
 Nügüd'aigaižes vepsän kirjamištos oma [[28 (lugu)|kaks'kümne kahesa]] kirjamed, lugemata [[apostrof]]an (pehmituzznaman).
 {| style="font-family:Arial Unicode MS; font-size:1.4em; border-color:#000000; border-width:1px; border-style:solid; border-collapse:collapse; background-color:#F8F8EF"
