--- a/Vepsän_kirjamišt.mw
+++ b/Vepsän_kirjamišt.mw
@@ -56,6 +56,54 @@ Ozaiten, Uspenskijan kirjamišt oli mugoman:
 
 Sen kirjamišt muga ei sai suren levigandused-ki.
 
+=== Kirilline kirjamišt (1989—2007) ===
+{| style="font-family:Arial Unicode MS; font-size:1.4em; border-color:#000000; border-width:1px; border-style:solid; border-collapse:collapse; background-color:#F8F8EF"
+| style="width:3em; text-align:center; padding: 3px;" | А а
+| style="width:3em; text-align:center; padding: 3px;" | Ӓ ӓ
+| style="width:3em; text-align:center; padding: 3px;" | Б б
+| style="width:3em; text-align:center; padding: 3px;" | В в
+| style="width:3em; text-align:center; padding: 3px;" | Г г
+| style="width:3em; text-align:center; padding: 3px;" | Д д
+| style="width:3em; text-align:center; padding: 3px;" | E e
+| style="width:3em; text-align:center; padding: 3px;" | Ё ё
+|-
+| style="width:3em; text-align:center; padding: 3px;" | Ж ж
+| style="width:3em; text-align:center; padding: 3px;" | З з
+| style="width:3em; text-align:center; padding: 3px;" | И и
+| style="width:3em; text-align:center; padding: 3px;" | Й й
+| style="width:3em; text-align:center; padding: 3px;" | К к
+| style="width:3em; text-align:center; padding: 3px;" | Л л
+| style="width:3em; text-align:center; padding: 3px;" | М м
+| style="width:3em; text-align:center; padding: 3px;" | Н н
+|-
+| style="width:3em; text-align:center; padding: 3px;" | О о
+| style="width:3em; text-align:center; padding: 3px;" | Ӧ ӧ
+| style="width:3em; text-align:center; padding: 3px;" | П п
+| style="width:3em; text-align:center; padding: 3px;" | Р р
+| style="width:3em; text-align:center; padding: 3px;" | С с
+| style="width:3em; text-align:center; padding: 3px;" | Т т
+| style="width:3em; text-align:center; padding: 3px;" | У у
+| style="width:3em; text-align:center; padding: 3px;" | Ў ў
+|-
+| style="width:3em; text-align:center; padding: 3px;" | Ӱ ӱ
+| style="width:3em; text-align:center; padding: 3px;" | Ф ф
+| style="width:3em; text-align:center; padding: 3px;" | Х х
+| style="width:3em; text-align:center; padding: 3px;" | Ц ц
+| style="width:3em; text-align:center; padding: 3px;" | Ч ч
+| style="width:3em; text-align:center; padding: 3px;" | Ш ш
+| style="width:3em; text-align:center; padding: 3px;" | Щ щ
+| style="width:3em; text-align:center; padding: 3px;" | ъ
+|-
+| style="width:3em; text-align:center; padding: 3px;" | ы
+| style="width:3em; text-align:center; padding: 3px;" | ь
+| style="width:3em; text-align:center; padding: 3px;" | Э э
+| style="width:3em; text-align:center; padding: 3px;" | Ю ю
+| style="width:3em; text-align:center; padding: 3px;" | Я я
+| style="width:3em; text-align:center; padding: 3px;" | 
+| style="width:3em; text-align:center; padding: 3px;" | 
+| style="width:3em; text-align:center; padding: 3px;" | 
+|}
+
 === Nügüd'aigaline (oficialine) kirjamišt (2007—...) ===
 Nügüd'aigaižes vepsän kirjamištos oma [[28 (lugu)|kaks'kümne kahesa]] kirjamed, lugemata [[apostrof]]an (pehmituzznaman).
 {| style="font-family:Arial Unicode MS; font-size:1.4em; border-color:#000000; border-width:1px; border-style:solid; border-collapse:collapse; background-color:#F8F8EF"
