"ш" предлагаю как в турецком, с точкой не очень

--- a/Vepsän_kirjamišt.mw
+++ b/Vepsän_kirjamišt.mw
@@ -56,6 +56,43 @@ Ozaiten, Uspenskijan kirjamišt oli mugoman:
 
 Sen kirjamišt muga ei sai suren levigandused-ki.
 
+=== Latinan kirjamišt (1932—1937) ===
+{| style="font-family:Arial Unicode MS; font-size:1.4em; border-color:#000000; border-width:1px; border-style:solid; border-collapse:collapse; background-color:#F8F8EF"
+| style="width:3em; text-align:center; padding: 3px;" | A a
+| style="width:3em; text-align:center; padding: 3px;" | Ä ä
+| style="width:3em; text-align:center; padding: 3px;" | B b
+| style="width:3em; text-align:center; padding: 3px;" | C c
+| style="width:3em; text-align:center; padding: 3px;" | Ç ç
+| style="width:3em; text-align:center; padding: 3px;" | D d
+| style="width:3em; text-align:center; padding: 3px;" | E e
+| style="width:3em; text-align:center; padding: 3px;" | F f
+|-
+| style="width:3em; text-align:center; padding: 3px;" | G g
+| style="width:3em; text-align:center; padding: 3px;" | H h
+| style="width:3em; text-align:center; padding: 3px;" | I i
+| style="width:3em; text-align:center; padding: 3px;" | J j
+| style="width:3em; text-align:center; padding: 3px;" | K k
+| style="width:3em; text-align:center; padding: 3px;" | L l
+| style="width:3em; text-align:center; padding: 3px;" | M m
+| style="width:3em; text-align:center; padding: 3px;" | N n
+|-
+| style="width:3em; text-align:center; padding: 3px;" | O o
+| style="width:3em; text-align:center; padding: 3px;" | Ö ö
+| style="width:3em; text-align:center; padding: 3px;" | P p
+| style="width:3em; text-align:center; padding: 3px;" | R r
+| style="width:3em; text-align:center; padding: 3px;" | S s
+| style="width:3em; text-align:center; padding: 3px;" | Ş ş
+| style="width:3em; text-align:center; padding: 3px;" | T t
+| style="width:3em; text-align:center; padding: 3px;" | U u
+|-
+| style="width:3em; text-align:center; padding: 3px;" | V v
+| style="width:3em; text-align:center; padding: 3px;" | Y y
+| style="width:3em; text-align:center; padding: 3px;" | Z z
+| style="width:3em; text-align:center; padding: 3px;" | Ƶ ƶ
+| style="width:3em; text-align:center; padding: 3px;" | ı
+| style="width:3em; text-align:center; padding: 3px;" | '
+|}
+
 === Kirilline kirjamišt (1989—2007) ===
 {| style="font-family:Arial Unicode MS; font-size:1.4em; border-color:#000000; border-width:1px; border-style:solid; border-collapse:collapse; background-color:#F8F8EF"
 | style="width:3em; text-align:center; padding: 3px;" | А а
