--- a/Vepsän_kirjamišt.mw
+++ b/Vepsän_kirjamišt.mw
@@ -56,7 +56,7 @@ Ozaiten, Uspenskijan kirjamišt oli mugoman:
 
 Sen kirjamišt muga ei sai suren levigandused-ki.
 
-=== Latinan kirjamišt (1932—1937) ===
+=== [[Latinizacii|Latinizacijan]] pordan nevondkundaline kirjamišt (1932—1937) ===
 {| style="font-family:Arial Unicode MS; font-size:1.4em; border-color:#000000; border-width:1px; border-style:solid; border-collapse:collapse; background-color:#F8F8EF"
 | style="width:3em; text-align:center; padding: 3px;" | A a
 | style="width:3em; text-align:center; padding: 3px;" | Ä ä
