/* Latinizacijan pordan nevondkundaline kirjamišt (1932—1937) */

--- a/Vepsän_kirjamišt.mw
+++ b/Vepsän_kirjamišt.mw
@@ -91,6 +91,8 @@ Sen kirjamišt muga ei sai suren levigandused-ki.
 | style="width:3em; text-align:center; padding: 3px;" | Ƶ ƶ
 | style="width:3em; text-align:center; padding: 3px;" | ı
 | style="width:3em; text-align:center; padding: 3px;" | '
+| style="width:3em; text-align:center; padding: 3px;" | 
+| style="width:3em; text-align:center; padding: 3px;" | 
 |}
 
 === Kirilline kirjamišt (1989—2007) ===
