*Empty MediaWiki Message*

--- a/Mompha_edax.mw
+++ b/Mompha_edax.mw
@@ -1,6 +1,6 @@
 '''''Mompha edax''''' om [[lipkaižed|lipkaižiden]] erik ''[[Momphidae]]''-sugukundas. Avaiži da ümbrikirjuti vl. 1962 entomolog Hodžes.
 
-Eläb päivnouzmas [[Evrop]]as. Necil lipkaižel, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
+Eläb päivnouzmaižes [[Evrop]]as. Necil lipkaižel, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
 {{stub}}
 
 [[Kategorii:Živatad kirjamišton mödhe]]
