*Empty MediaWiki Message*

--- a/Vepsän_rahvhan_sarnad_(1996).mw
+++ b/Vepsän_rahvhan_sarnad_(1996).mw
@@ -4,7 +4,7 @@
 
 Kirjan tegijad oma [[Zaiceva Marja|Marija Zaiceva]] da [[Onegina Nina|Nina Onegina]].
 
-Kirjas oma [[55 (lugu)|55]] sarnad [[13 (lugu)|13]] vepsän küläspäi. [[22 (lugu)|22]] nenišpäi oliba kirjutadud [[Karjalan Tazovaldkund]]as ([[Šoutjärv']], [[Mecantaga]], [[Kaleig]], [[Šokš]], [[Matfejansel'g]], [[Tihoništ]]), [[19 (lugu)|19]] — [[Leningradan agj]]as ([[Ladv]], [[Järved]], [[Pecoil]], [[Šidjärv]], [[Sodjärv]]) da [[14 (lugu)|14]] — [[Vologdan agj|Vologdan agj]]as ([[Pondal]], [[Kuja]]).
+Kirjas om [[55 (lugu)|55]] sarnad [[13 (lugu)|13]] vepsän küläspäi. [[22 (lugu)|22]] nenišpäi oliba kirjutadud [[Karjalan Tazovaldkund]]as ([[Šoutjärv']], [[Mecantaga]], [[Kaleig]], [[Šokš]], [[Matfejansel'g]], [[Tihoništ]]), [[19 (lugu)|19]] — [[Leningradan agj]]as ([[Ladv]], [[Järved]], [[Pecoil]], [[Šidjärv]], [[Sodjärv]]) da [[14 (lugu)|14]] — [[Vologdan agj|Vologdan agj]]as ([[Pondal]], [[Kuja]]).
 
 Nece kirj om lujas arvokaz ei vaiše vepsän fol'kloristikale, no vepsän paginantedole-ki.
 
