*Empty MediaWiki Message*

--- a/Myrmecophilus_sanctaehelenae.mw
+++ b/Myrmecophilus_sanctaehelenae.mw
@@ -1,6 +1,6 @@
 '''''Myrmecophilus sanctaehelenae''''' om [[oigedsuugaižed|oigedsuugaižiden]] erik ''[[Myrmecophilidae]]''-sugukundas. Avaiži da ümbrikirjuti vl. 1970 entomolog [[Šopar Lüs'jen|Šopar]].
 
-Eläb päivnouzmaižes [[Afrik]]as. Necil lipkaižel, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
+Eläb päivnouzmaižes [[Afrik]]as. Necil gavedil, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
 {{stub}}
 
 [[Kategorii:Živatad kirjamišton mödhe]]
