*Empty MediaWiki Message*

--- a/Cybaeota.mw
+++ b/Cybaeota.mw
@@ -1,10 +1,10 @@
 '''''Cybaeota''''' om [[hämähoukud|hämähoukuiden]] sugu ''[[Cybaeidae]]''-sugukundas. Areal — [[AÜV]], [[Kanad]].
 
 Om nell' erikad:
-* ''[[Cybaeota calcarata]]''
-* ''[[Cybaeota munda]]''
-* ''[[Cybaeota nana]]''
-* ''[[Cybaeota shastae]]''
+* ''[[Cybaeota calcarata]]'' (AÜV, Kanad)
+* ''[[Cybaeota munda]]'' (AÜV)
+* ''[[Cybaeota nana]]'' (AÜV)
+* ''[[Cybaeota shastae]]'' (AÜV)
 {{stub}}
 
 [[Kategorii:Hämähoukud]]
