*Empty MediaWiki Message*

--- a/Ainsa-Sobrarbe.mw
+++ b/Ainsa-Sobrarbe.mw
@@ -1,10 +1,10 @@
 {{Eländpunkt
- | Nimi = Ville la Komb<br />Villers-la-Combe
- | Lidnanznam = 
+ | Nimi = Ainsa Sobrarbe<br />Aínsa-Sobrarbe<br />L'Aínsa-Sobrarbe
+ | Lidnanznam = Escudo de l'Aínsa.svg
  | Flag = 
- | Lidnanznam text = 
+ | Lidnanznam text = Ainsa Sobrarben lidnanznam
  | Flag text = 
- | Valdkund = Francii
+ | Valdkund = Ispanii
  | Eläjiden lugu = 2 242
  | Voz' = 2012
  | Pind = 285
@@ -20,5 +20,3 @@ Pind om läz 285 km². Ainsa Sobrarben eläjiden lugu oli 2,242 ristitud 2012-ž
 
 [[Kategorii:Ispanijan lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
-
-[[fr:Aínsa-Sobrarbe]]
