-järvI не нравится

--- a/Semönov_Pötr.mw
+++ b/Semönov_Pötr.mw
@@ -1,5 +1,5 @@
 [[Fail:Sem′onov P′otr.JPG|thumb|right|225px|Pötr Semönov]]
-'''Pötr Mihailovič Semönov''' ([[Venäkel'|ven.]] ''Пётр Михайлович Семёнов'', [[karjalan kel'|karj.]] ''P'otr Sem'onov''; sünd. [[11. heinku]] [[1934]], [[Rodinjärvi]]-külä, [[Karjal]], [[NSTÜ]]) om [[karjalaižed|karjalaine]] kirjutai i kändai. Kirjutab [[karjalan kel'|karjalan kelen]] [[livvin kel'|livvin paginal]].
+'''Pötr Mihailovič Semönov''' ([[Venäkel'|ven.]] ''Пётр Михайлович Семёнов'', [[karjalan kel'|karj.]] ''P'otr Sem'onov''; sünd. [[11. heinku]] [[1934]], [[Rodinjärv (külä)|Rodinjärv]]-külä, [[Karjal]], [[NSTÜ]]) om [[karjalaižed|karjalaine]] kirjutai i kändai. Kirjutab [[karjalan kel'|karjalan kelen]] [[livvin paginišt|livvin paginal]].
 
 {{stub}}
 
