*Empty MediaWiki Message*

--- a/Londuz.mw
+++ b/Londuz.mw
@@ -1,6 +1,8 @@
 {{1000}}
-[[Fail:Klimkovka-prud.JPG|thumb|right|350px|Klimovkan uit ([[Kirovan agj]])]]
-'''Londuz''' om [[Mir]]un materialine mail'm.
+[[Fail:Klimkovka-prud.JPG|thumb|right|350px|Klimovkan uit ([[Kirovan agj]], [[Venäma]])]]
+'''Londuz''' om [[Mir]]un materialine mail'm, faktižikš — [[naturaližed tedod|naturaližiden tedoiden]] [[opendan objekt|opendan päobjekt]].
+
+Mugažo sen termin hal'g kävutadab ''londuseližen [[elämižümbrišt]]on'' tärtuses (kaik, miše ristitud ei tegigoi).
 
 == Kacu mugazo ==
 * [[Kosmos (avaruz)]]
