--- a/Virtanen_Veikko.mw
+++ b/Virtanen_Veikko.mw
@@ -1,6 +1,6 @@
 '''Veikko Armas Virtanen''' (sünd. [[14. heinku]] [[1928]], [[Hel'sinki]], [[Suomenma]]) om tetab suomalaine [[organ (soit)|organmaster]].
 
-Lendi enamb 150 organad; niišpäi — [[Temppeliaukio]]n (1975), [[Lahtin Ristun jumalankodi]]n (1978) da [[Turkun jumalanpert'|Turkun jumalanpertin]] (1979—1980) organad.
+Lendi enamb 150 organad; kaikiš znamoičembad niišpäi — [[Temppeliaukio]]n (1975), [[Lahtin Ristun jumalankodi]]n (1978) da [[Turkun jumalanpert'|Turkun jumalanpertin]] (1979—1980) organad.
 
 Nügüd' hänen poig emägoičese organtöl mugažo.
 {{stub}}
