Я бы заменил, потому что emägoitas скорее о женщине - по дому

--- a/Virtanen_Veikko.mw
+++ b/Virtanen_Veikko.mw
@@ -2,7 +2,7 @@
 
 Lendi enamb 150 organad; kaikiš znamoičembad niišpäi — [[Temppeliaukio]]n (1975), [[Lahtin Ristun jumalankodi]]n (1978) da [[Turkun jumalanpert'|Turkun jumalanpertin]] (1979—1980) organad.
 
-Nügüd' hänen poig emägoičese organtöl mugažo.
+Nügüd' hänen poig ižandoitase organtöl mugažo.
 {{stub}}
 
 [[Kategorii:Organmasterad]]
