*Empty MediaWiki Message*

--- a/Šotlandijan_gelan_pank.mw
+++ b/Šotlandijan_gelan_pank.mw
@@ -4,6 +4,4 @@ Kaikiš tetabambad ezitajad oma [[Mill a h-Uile Rud]] i [[Oi Polloi]].
 
 {{stub}}
 
-[[Kategorii:Pankgruppad]]
-[[Kategorii:Pankrokgruppad]]
-[[Kategorii:Muzikgruppad kirjamišton mödhe]]
+[[Kategorii:Pankrok]]
