*Empty MediaWiki Message*

--- a/Mill_a_h-Uile_Rud.mw
+++ b/Mill_a_h-Uile_Rud.mw
@@ -10,7 +10,7 @@ Nece grupp om kaikiš tetabamb [[Šotlandijan gelan pank|gelan pank]] (Punc Gài
 
 {{stub}}
 
-[[Kategorii:Pankgruppad]]
+[[Kategorii:Pankrokgruppad]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
 [[Kategorii:Mill a h-Uile Rud|*]]
 [[Kategorii:AÜV:oiden muzikgruppad‎]]
