*Empty MediaWiki Message*

--- a/Oi_Polloi.mw
+++ b/Oi_Polloi.mw
@@ -34,7 +34,7 @@
 
 {{stub}}
 
-[[Kategorii:Pankgruppad]]
+[[Kategorii:Pankrokgruppad]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
 [[Kategorii:Oi Polloi|*]]
 [[Kategorii:Suren Britanijan muzikgruppad‎]]
