*Empty MediaWiki Message*

--- a/Optimal.mw
+++ b/Optimal.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = [[Secret Star|Sabina]], [[C. C. Catch|Karolina]], Sil'vija, Klaudija
  | Sait = 
 }}
-'''«Optimal»''' oli [[Saksanma|saksalaine]] [[disko]]pop- / [[džaz]]- / [[sintipop]]grupp [[Osnabrük]]aspäi, [[1983]]. vlpäi [[1985]]. vhasai.
+'''«Optimal»''' oli [[Saksanma|saksalaine]] [[disko]]pop- / [[džaz]]- / [[sintipop]]grupp [[Osnabrük]]aspäi, [[1983]]. vlpäi [[1985]]. vhesai.
 
 Mülükundas oliba Sabina Lürenbaum ([[saksan kel'|saks.]]: ''Sabine Lürenbaum''; hän linni tetabaks kut [[Secret Star]]), Karolina Katarina Müller ([[alaman kel'|alam.]]: ''Caroline Catherine Müller''; linni tetabaks kut [[C. C. Catch]]), Sil'vija Fröčel' (saks.: ''Sylvia Frötschel'') da Klaudija Štürcenbeher (saks.: ''Claudia Stürzenbecher''). Grupp äneti vaiše kaks' singloid toižetujas mülükundas.
 
