--- a/Gar_d'Aržikur_P'jerrpon.mw
+++ b/Gar_d'Aržikur_P'jerrpon.mw
@@ -1,8 +1,8 @@
 [[Fail:Hargicourt - Pierrepont - Nouvelle halte - C.jpg|thumb|right|250px|Gar d'Aržikur P'jerrpon]]
 [[Fail:Hargicourt - Pierrepont - L'ancienne gare - A.JPG|thumb|right|250px|Enzne stancijan pert'; nügüd' om saubas]]
-'''Gar d'Aržikur P'jerrpon''' ([[francijan kel'|franc.]]: ''Gare d'Hargicourt — Pierrepont'') om [[raudtestancii]] [[Francii|Francijas]], [[Gar d'Am'jen|Am'jen]]—[[Gar de Komp'jen'|Komp'jen']]-linijas. Om [[Aržikur]]-kommunan südäimes, läz [[P'jerrpon sür Avr]]-kommunaspäi.
+'''Gar d'Aržikur P'jerrpon''' ([[francijan kel'|franc.]]: ''Gare d'Hargicourt — Pierrepont'') om [[raudtestancii]] [[Francii|Francijas]], [[Gar d'Am'jen|Am'jen]]—[[Gar de Komp'jen'|Komp'jen']]-linijas. Om [[Aržikur]]-kommunan südäimes, läz [[P'jerrpon sür Avr]]-kommunad.
 
-Om üks' platformad.
+Om üks' platform.
 {{stub}}
 
 [[Kategorii:Raudtestancijad Francijas]]
