--- a/Optimal.mw
+++ b/Optimal.mw
@@ -17,7 +17,7 @@
 
 Mülükundas oliba Sabina Lürenbaum ([[saksan kel'|saks.]]: ''Sabine Lürenbaum''; hän linni tetabaks kut [[Secret Star]]), Karolina Katarina Müller ([[alaman kel'|alam.]]: ''Caroline Catherine Müller''; linni tetabaks kut [[C. C. Catch]]), Sil'vija Fröčel' (saks.: ''Sylvia Frötschel'') da Klaudija Štürcenbeher (saks.: ''Claudia Stürzenbecher''). Grupp äneti vaiše kaks' singloid toižetujas mülükundas.
 
-Ühten ezinendan aigan prodüser [[Bolen Diter|Diter Bolen]] homaiči heid, i tariči ühthižtön kahtele ühtnijoile. Jäl'ges sidä kollektiv čihozi. Karolina linni ani tetabaks diskoezitajaks edelespäi [[Evrop]]as, a vot Lürenbauman karjer oli vähemb satusekaz. Sil'vijan i Klaudijan ozahuz muzikas om läz tundmatoi.
+Ühten ezinendan aigan prodüser [[Bolen Diter|Diter Bolen]] homaiči heid, i tariči ühthižtön kahtele ühtnijale. Jäl'ges sidä kollektiv čihozi. Karolina linni ani tetabaks diskoezitajaks edelespäi [[Evrop]]as, a vot Lürenbauman karjer oli vähemb satusekaz. Sil'vijan i Klaudijan ozahuz muzikas om läz tundmatoi.
 
 == Diskografii ==
 
