'Miami Florida city flag.svg' -> 'Flag of Miami, Florida.svg' using [[commons:Commons:GlobalReplace|GlobalReplace v0.2a - Fastily's PowerToys]]: Bill william compton moved page File:Miami Florida city flag.svg to File:Flag of Miami, Florida.svg: File r...

--- a/Majami.mw
+++ b/Majami.mw
@@ -1,7 +1,7 @@
 {{Eländpunkt
  | Nimi = Majami<br />Miami
  | Lidnanznam = Escudo de Miami.svg
- | Flag = Miami Florida city flag.svg
+ | Flag = Flag of Miami, Florida.svg
  | Lidnanznam text = Majamin znam
  | Flag text = Majamin flag
  | Valdkund = Amerikan Ühtenzoittud Valdkundad
