--- a/Marginal.mw
+++ b/Marginal.mw
@@ -1,7 +1,7 @@
 [[Fail:Lost children russia about 1942.jpg|thumb|right|250px|Kadotud venälaižed lapsed voinan aigan, 1942]]
 '''Marginal''' om ristit, kudambal ei ole ičeze [[socialine status|sociališt statusad]], vai kudambal se kadoi. Tobjimalaz malginalad oma «röunal» erazvuiččiden socialižiden gruppoiden keskes, i ei mülügoi konkretižhe kundaližhe klassha. Erasišti kävutase «autsaiderad»-termin.
 
-Lugedas marginaloikš [[radotomuz|radotomiden]] pala, [[koditomad]], [[bomž]]ad, [[niššatad]], [[hizaidajad]]; a mugažo [[meletomad]], čudižed, [[invalidižuz|invalidad]], [[autizm|autistad]], [[subkul'tur]]oiden riven ezitajad ([[gopnikad]], sitvacad {{k|отморозки}}).
+Lugedas marginaloikš [[radotomuz|radotomiden]] pala, [[koditomad]], [[bomž]]ad, [[niššatad]], [[hizaidajad]], arestantad; a mugažo [[meletomad]], čudižed, [[invalidižuz|invalidad]], [[autizm|autistad]], [[subkul'tur]]oiden riven ezitajad ([[gopnikad]], sitvacad {{k|отморозки}}).
 
 == Kacu mugažo ==
 * [[Marginalizacii]]
