*Empty MediaWiki Message*

--- a/Šveicarii.mw
+++ b/Šveicarii.mw
@@ -14,11 +14,11 @@
 |-
 | align=center colspan=2 | [[Fail:Europe-Switzerland.svg|300px]]
 |}
-'''Šveicarii''' ([[Saksan kel'|saks.]]: ''Schweiz'', [[Francijan kel'|franc.]]: ''Suisse'', [[Italijan kel'|ital.]]: ''Svizzera'', [[Retoromanšan kel'|romanš.]]: ''Svizra'') — valdkund [[Evropa]]s. Šveicarijan oma mavaldkundröunad [[Germanii|Germanijanke]], [[Italii|Italijanke]], [[Francii|Francijanke]] da [[Lihtenštein]]anke.
+'''Šveicarii''' ([[Saksan kel'|saks.]]: ''Schweiz'', [[Francijan kel'|franc.]]: ''Suisse'', [[Italijan kel'|ital.]]: ''Svizzera'', [[Romanšan kel'|romanš.]]: ''Svizra'') — valdkund [[Evropa]]s. Šveicarijan oma mavaldkundröunad [[Germanii|Germanijanke]], [[Italii|Italijanke]], [[Francii|Francijanke]] da [[Lihtenštein]]anke.
 
 Eläjiden lugu — 7,7 mln.</br>
 Pind — 41 284 km<sup>2</sup>.
 
-{{Evropa}}
+{{Evrop}}
 
 [[Kategorii:Šveicarii| ]]
