*Empty MediaWiki Message*

--- a/Valendas.mw
+++ b/Valendas.mw
@@ -19,7 +19,5 @@ Pind oli läz 23 km², a eläjiden lugu 2010-žen voden lopindal oli 298 ristitu
 {{stub}}
 
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
-[[Kategorii:Šveicarijan eländpunktad]]
+[[Kategorii:Šveicarijan lidnad]]
 [[Kategorii:Enččed eländpunktad]]
-
-[[fr:Valendas]]
