--- a/Ciolkovskii_Konstantin.mw
+++ b/Ciolkovskii_Konstantin.mw
@@ -2,5 +2,5 @@
 '''Konstantin Eduardovič Ciolkovskii''' ([[venäkel'|ven.]]: ''Константин Эдуардович Циолковский''; sünd. [[17. sügüz'ku]] [[1857]], [[Iževskoje]], [[Räzanin agj]] — [[19. sügüz'ku]] [[1935]], [[Kalug]], [[Venäma]] ([[NSTÜ]])) oli venälaine i nevondkundaline tedomez' da fizik. Üks' [[kosmonavtik]]an pionerišpäi.
 {{stub}}
 
-[[Kategorii:Tedomehed]]
+[[Kategorii:Tedomehed kirjamišton mödhe]]
 [[Kategorii:Fizikantedomehed]]
