*Empty MediaWiki Message*

--- a/Einštein_Al'bert.mw
+++ b/Einštein_Al'bert.mw
@@ -11,5 +11,5 @@ Hän om nenižiden tedoteorijoiden sädai:
 * [[Braunan kobaiduz|Braunan kobaidusen]] statistine teorii.
 * [[Induciruidud sädegoičend]]an teorii.
 
-[[Kategorii:Tedomehed]]
+[[Kategorii:Tedomehed kirjamišton mödhe]]
 [[Kategorii:Fizikantedomehed]]
