--- a/Freid_Anna.mw
+++ b/Freid_Anna.mw
@@ -24,6 +24,6 @@ Lindes ičeze tatan tedonägendoiden jäl'gnikan, Anna Freid šingoti ezikät ps
 
 {{Vepsän Vikii|[http://veps-kir.wikia.com/wiki/Фрэйд_Анна Фрэйд Анна]}} 
 
-[[Kategorii:Tedomehed]]
+[[Kategorii:Tedomehed kirjamišton mödhe]]
 [[Kategorii:Psihologad]]
 [[Kategorii:Psihoanalitikad]]
