--- a/Freid_Zigmund.mw
+++ b/Freid_Zigmund.mw
@@ -6,6 +6,6 @@ Hänen tütär [[Freid Anna|Anna Freid]] oli psihologan i psihoanalitikan, lapsi
 
 {{stub}}
 
-[[Kategorii:Tedomehed]]
+[[Kategorii:Tedomehed kirjamišton mödhe]]
 [[Kategorii:Psihologad]]
 [[Kategorii:Psihoanalitikad]]
