--- a/Paster_Lui.mw
+++ b/Paster_Lui.mw
@@ -6,5 +6,5 @@ Pastöran kaclendtegod ozutiba mugažo, miše meiden aigan elon ičesündundad e
 
 {{stub}}
 
-[[Kategorii:Tedomehed]]
+[[Kategorii:Tedomehed kirjamišton mödhe]]
 [[Kategorii:Biologad]]
