*Empty MediaWiki Message*

--- a/Njuton_Isaak.mw
+++ b/Njuton_Isaak.mw
@@ -4,6 +4,6 @@
 
 {{stub}}
 
-[[Kategorii:Tedomehed]]
+[[Kategorii:Tedomehed kirjamišton mödhe]]
 [[Kategorii:Fizikantedomehed]]
 [[Kategorii:Matematikantedomehed]]
