*Empty MediaWiki Message*

--- a/Leonardo_da_Vinči.mw
+++ b/Leonardo_da_Vinči.mw
@@ -5,7 +5,7 @@
 {{stub}}
 
 [[Kategorii:Pirdajad]]
-[[Kategorii:Tedomehed]]
+[[Kategorii:Tedomehed kirjamišton mödhe]]
 [[Kategorii:Anatomad]]
 [[Kategorii:Fizikantedomehed]]
 [[Kategorii:Matematikantedomehed]]
