*Empty MediaWiki Message*

--- a/Pohlöbkin_Vil'jam.mw
+++ b/Pohlöbkin_Vil'jam.mw
@@ -4,5 +4,5 @@ Hän om kaikiš tetabamb kuti [[kulinarii|kulinarijan]] tedoidai i populärizato
 
 {{stub}}
 
-[[Kategorii:Tedomehed]]
+[[Kategorii:Tedomehed kirjamišton mödhe]]
 [[Kategorii:Istorikad]]
