*Empty MediaWiki Message*

--- a/Tesla_Nikola.mw
+++ b/Tesla_Nikola.mw
@@ -8,5 +8,5 @@ Tesla om tutab kut [[Efiran teorii (fizik)|efiran teorijan]] polenpidai.
 
 Hänen nimel (Tesla) om nimitanu magnitvalun tihedusen ühtnik.
 
-[[Kategorii:Tedomehed]]
+[[Kategorii:Tedomehed kirjamišton mödhe]]
 [[Kategorii:Fizikantedomehed]]
