*Empty MediaWiki Message*

--- a/Taksami_Čuner.mw
+++ b/Taksami_Čuner.mw
@@ -2,5 +2,5 @@
 
 Tegi ezmäižed [[Nivhan kel'|nivha]]-venälaižen da venä-nivhalaižen vajehnakad.
 
-[[Kategorii:Tedomehed]]
+[[Kategorii:Tedomehed kirjamišton mödhe]]
 [[Kategorii:Nivhalaižed]]
