*Empty MediaWiki Message*

--- a/Uatt_Džeims.mw
+++ b/Uatt_Džeims.mw
@@ -4,5 +4,5 @@
 
 Uattan nimel om nimitadud vägevuden ühtnik — [[Uatt|uatt (W)]].
 
-[[Kategorii:Tedomehed]]
+[[Kategorii:Tedomehed kirjamišton mödhe]]
 [[Kategorii:Fizikantedomehed]]
