*Empty MediaWiki Message*

--- a/Šrödinger_Ervin.mw
+++ b/Šrödinger_Ervin.mw
@@ -2,7 +2,7 @@
 [[Fail:Erwin_Schrödinger.jpg|thumb|Ervin Šrödinger (1933)]]
 '''Ervin Rudol'f Jozef Aleksander Šrödinger''' ([[saksan kel'|saksan kelel]]: Erwin Rudolf Josef Alexander Schrödinger) (12.08.1887, [[Ven]] – 04.01.1961, Ven) oli [[Avstrii|avstrijalaine]] [[teoretine fizik|fizik-teoretik]], kenen pätöd oma [[kvantmehanik]]as.
 
-E. Šrödinger om 1933 voden [[Nobelän premii|Nobelän premijan]] laureat.
+E. Šrödinger om 1933 voden [[Nobelin premii|Nobelin premijan]] laureat.
 
-[[Kategorii:Tedomehed]]
+[[Kategorii:Tedomehed kirjamišton mödhe]]
 [[Kategorii:Fizikantedomehed]]
