"Сохранившийся"; пошловатое кинцо начали снимать чуть ли не сразу после появления первого фильма.

--- a/Marijan_hebonmez'.mw
+++ b/Marijan_hebonmez'.mw
@@ -1,6 +1,6 @@
 '''«Marijan hebonmez'»''' ([[francijan kel'|franc.]]: ''Le Coucher de la Mariée'') om voden [[1896]] francijalaine bigi [[pornofil'm]]. Režissör — [[Piru Ežen|Ežen Piru]].
 
-Faktižikš, nece om ezmäine pornofil'm [[kinematograf]]an istorijas. Fil'mpiduz oli läz 7 minutad, no tämbäižhe aighasai om varanu vaiše sen pen' fragment.
+Faktižikš, nece om ezmäine varaidud pornofil'm [[kinematograf]]an istorijas. Fil'mpiduz oli läz 7 minutad, no tämbäižhe aighasai om varanu vaiše sen pen' fragment.
 
 Fil'maktörad oma eraz [[kabare]]artist [[Villi Luiz|Luiz Villi]] da tähäsai tundmatoi aktör.
 {{stub}}
