*Empty MediaWiki Message*

--- a/Valendas.mw
+++ b/Valendas.mw
@@ -15,7 +15,7 @@
 }}
 '''Valendas''' ([[saksan kel'|saks.]]: ''Valendas'', [[romanšan kel'|romanš.]]: ''Valendau'') oli kommun [[Šveicarii|Šveicarijas]], [[Graubünden]]-kantonas.
 
-Pind oli läz 23 km², a eläjiden lugu 2010-žen voden lopindal oli 298 ristitud. [[2013]]-žen voden [[1. viluku|Vilukun 1. päiväl]] Valendas-, [[Ferzam]]-, [[Zafin]]- da [[Tenn (Graubünden)|Tenn]]-kommunad oliba ühtenzoitud [[Zafintal]]-lidnudeks.
+Pind oli läz 23 km², a eläjiden lugu 2010-žen voden lopindal oli 298 ristitud. [[2013]]-žen voden [[1. viluku|Vilukun 1. päiväl]] Valendas-, [[Ferzam]]-, [[Zafin]]- da [[Tenn (Graubünden)|Tenn]]-kommunad oliba ühtenzoitud [[Zafintal]]-lidnudenke.
 {{stub}}
 
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
