--- a/Lacuna_Coil.mw
+++ b/Lacuna_Coil.mw
@@ -26,7 +26,8 @@
 
 == Irdkosketused ==
 * [http://www.lacunacoil.it/ Oficialine sait]
-* [http://www.emptyspiral.net/ Oficialine forum]
+* [http://www.emptyspiral.net/ Oficialine fansait]
+* [http://www.lcband.ru/ Venäkel'ne fansait]
 {{stub}}
 {{Lacuna Coil}}
 
