--- a/Tullei.mw
+++ b/Tullei.mw
@@ -1,8 +1,8 @@
 {{1000}}
-[[Fail:Blowing in the Wind (4211447682).jpg|thumb|right|250px|Tullejan aigan]]
+[[Fail:Blowing in the Wind (4211447682).jpg|thumb|right|250px|Tullein aigan]]
 '''Tullei''' om erazvuiččen [[gaz]]oiden valuiden likund, putub [[atmosfer]]as gorizontaližhe čuradushe. [[Ma]]s se om [[il'm]]an valud.
 
-Tullejad erineda vägen mödhe: [[briz]]aspäi [[uragan]]ahesai. Kaikenaigaižed kovad tullejad voidas veda surmičijahesai valatoitusehesai [[ümbrišt]]ole ([[erozii (geologii)|erozijad]] i m. e.).
+Tulleid erineda vägen mödhe: [[briz]]aspäi [[uragan]]ahesai. Kaikenaigaižed kovad tulleid voidas veda surmičijahesai valatoitusehesai [[ümbrišt]]ole ([[erozii (geologii)|erozijad]] i m. e.).
 {{stub}}
 {{sä}}
 
