*Empty MediaWiki Message*

--- a/Rajan_Petti.mw
+++ b/Rajan_Petti.mw
@@ -1,4 +1,4 @@
-'''Petti (Bridžit) Rajan''' ([[anglijan kel'|angl.]]: ''Petty (Brigit) Rayan'') om [[Saksanma|saksalaine]] [[evrodisko]]pajatai.
+'''Petti (Bridžit) Rajan''' ([[anglijan kel'|angl.]]: ''Patty (Brigit) Ryan'') om [[Saksanma|saksalaine]] [[evrodisko]]pajatai.
 
 Hän linni tetabaks 80-židen voziš jäl'ges «You're My Love, You're My Life»-singlan pästandad. Toižed populärižed pajod oma «Love is the Name of the Game», «Stay with Me Tonight» da «I Don't Wanna Lose You Tonight». Debütine al'bom, «Love is the Name of the Game», oli populärine [[Kitai|Kitajas]] da [[Japonii|Japonijas]].
 
