*Empty MediaWiki Message*

--- a/Mišel'_(pajatai).mw
+++ b/Mišel'_(pajatai).mw
@@ -10,6 +10,9 @@ Venämas Mišel' tetab mugažo ühthižtön [[Rudenko Leonid|DJ Leonidanke Ruden
 * ''Only You (feat. [[Ropča Andrei|Randi]])'' (2011)
 * ''What If (feat. Randi)'' (2011)
 * ''It Feels So Good'' (2012)
+
+== Irdkosketused ==
+* [http://www.hahahaproduction.com/ro/production/mishelle/biography Mišel' «HaHaHa Production»-leiblan saital]
 {{stub}}
 
 [[Kategorii:Pajatajad kirjamišton mödhe]]
